[gd_scene load_steps=13 format=2]

[ext_resource path="res://RESOURCES/Font/BMYEONSUNG.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://RESOURCES/GuiImages/ParchmentSmall.png" type="Texture" id=2]
[ext_resource path="res://RESOURCES/GuiImages/DivisionLine.png" type="Texture" id=3]
[ext_resource path="res://RESOURCES/GuiImages/StoneBoardBorder.png" type="Texture" id=4]
[ext_resource path="res://RESOURCES/Specializations/Assassination.png" type="Texture" id=5]
[ext_resource path="res://RESOURCES/GuiImages/ParchmentMedium.png" type="Texture" id=6]
[ext_resource path="res://RESOURCES/GuiImages/SkillTree.png" type="Texture" id=7]
[ext_resource path="res://UI/Screens/Specializations/SpecializationInfo/SpecializationInfo.gd" type="Script" id=8]
[ext_resource path="res://UI/Screens/Specializations/SpecializationInfo/SpecializationAttribute/SpecializationAttribute.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[node name="SpecializationInfo" type="NinePatchRect"]
margin_right = 1080.0
margin_bottom = 461.0
rect_min_size = Vector2( 0, 461 )
size_flags_horizontal = 3
texture = ExtResource( 4 )
patch_margin_left = 61
patch_margin_top = 67
patch_margin_right = 55
patch_margin_bottom = 69
script = ExtResource( 8 )

[node name="Background" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Margin" type="Label" parent="Background/HBoxContainer"]
margin_top = 200.0
margin_right = 400.0
margin_bottom = 214.0
rect_min_size = Vector2( 400, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="Background/HBoxContainer"]
margin_left = 404.0
margin_right = 1020.0
margin_bottom = 414.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NameBackground" type="TextureRect" parent="Background/HBoxContainer/VBoxContainer"]
margin_right = 616.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 170 )
texture = ExtResource( 2 )
expand = true

[node name="Name" type="Label" parent="Background/HBoxContainer/VBoxContainer/NameBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Assassination:
Apprentice"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Background/HBoxContainer/VBoxContainer"]
margin_top = 174.0
margin_right = 616.0
margin_bottom = 414.0
size_flags_vertical = 3

[node name="AttributesBackground" type="TextureRect" parent="Background/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 310.0
margin_bottom = 240.0
rect_min_size = Vector2( 310, 0 )
texture = ExtResource( 6 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="Background/HBoxContainer/VBoxContainer/HBoxContainer/AttributesBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -15.0

[node name="Label" type="Label" parent="Background/HBoxContainer/VBoxContainer/HBoxContainer/AttributesBackground/VBoxContainer"]
margin_right = 270.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Total Attributes:"

[node name="TextureRect" type="TextureRect" parent="Background/HBoxContainer/VBoxContainer/HBoxContainer/AttributesBackground/VBoxContainer"]
margin_top = 52.0
margin_right = 270.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 10 )
texture = ExtResource( 3 )
expand = true

[node name="ScrollContainer" type="ScrollContainer" parent="Background/HBoxContainer/VBoxContainer/HBoxContainer/AttributesBackground/VBoxContainer"]
margin_top = 66.0
margin_right = 270.0
margin_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AttributesContainer" type="VBoxContainer" parent="Background/HBoxContainer/VBoxContainer/HBoxContainer/AttributesBackground/VBoxContainer/ScrollContainer"]
margin_right = 139.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SpecializationAttribute" parent="Background/HBoxContainer/VBoxContainer/HBoxContainer/AttributesBackground/VBoxContainer/ScrollContainer/AttributesContainer" instance=ExtResource( 9 )]
margin_top = 0.0
margin_right = 270.0
margin_bottom = 42.0

[node name="SpecializationAttribute2" parent="Background/HBoxContainer/VBoxContainer/HBoxContainer/AttributesBackground/VBoxContainer/ScrollContainer/AttributesContainer" instance=ExtResource( 9 )]
margin_top = 46.0
margin_right = 270.0
margin_bottom = 88.0

[node name="SpecializationAttribute3" parent="Background/HBoxContainer/VBoxContainer/HBoxContainer/AttributesBackground/VBoxContainer/ScrollContainer/AttributesContainer" instance=ExtResource( 9 )]
margin_top = 92.0
margin_right = 270.0
margin_bottom = 134.0

[node name="MarginCenter" type="Label" parent="Background/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 314.0
margin_top = 113.0
margin_right = 341.0
margin_bottom = 127.0
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="Background/HBoxContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color( 0, 0, 0, 0.701961 )
margin_left = 345.0
margin_right = 585.0
margin_bottom = 240.0
rect_min_size = Vector2( 240, 240 )
custom_styles/panel = SubResource( 4 )

[node name="TextureRect" type="TextureRect" parent="Background/HBoxContainer/VBoxContainer/HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="Button" type="Button" parent="Background/HBoxContainer/VBoxContainer/HBoxContainer/Panel"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginRight" type="Label" parent="Background/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 589.0
margin_top = 113.0
margin_right = 616.0
margin_bottom = 127.0
size_flags_horizontal = 3
